增加派单列表数据

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,28 @@
     <string name="my_4">意见留言</string>
     <string name="my_5">设置</string>
 
+    <string name="tishi_1">
+此流程步骤旨在指导、提醒您执行治丧服务。
+\n第1步：您点击进入“处理临终现场”，前往治丧现场时，及时填写“治丧地址”，这样便于您后续派单执行。
+\n第2步：根据线下执行服务阶段，点击对应的流程按钮，并完成表单信息，进入下一步。
+\n第3步：开始出殡前、出殡当天服务时，及时点击“开始服务”，根据流程引导完成表单信息，执行治丧服务。</string>
+    <string name="tishi_2">
+        【如何派单】
+\n第1步：确认家属需要“入殓师”则第一时间派单【入殓师】。
+\n第2步：派单入殓师后，确定殡仪馆，并联系殡仪馆接运遗体。
+\n第3步：等待遗体接运期间，若客户家中有人留守则申请派单【棚架搭建】。
+\n第4步：前往治丧现场时，派单【灵堂装饰】、【消耗用品】、【回礼】。
+\n第5步：棚架搭建人员开始操作后，派单【奉灵仪式】。
+\n第6步：办理火化手续，前往殡仪馆前30分钟，派单【代办火化手续】。
+\n第7步：出殡前一天下午16:00派单【家祭仪式】。
+\n第8步：出殡时间前1小时派单【出殡仪式】
+\n第9步：到达殡仪馆前30分钟，派单【殡仪馆服务】
+\n        【如何评价】
+\n第1步：执行商家完成该项目提交审核后，系统开启”评价“按钮。
+\n第2步：确认执行商家按公司制定标准完成该项目，点击”评价“。
+\n第3步：根据执行的真实情况，点击服务星级，并提交评价页签。
+    </string>
+
     <string name="contract_1" formatted="false">
     5、甲乙双方约定选择以下方式由甲方向乙方支付各项费用：微信扫码支付、POS刷卡支付 、现金支付
         \n6、乙方收到各项费用后将以邮件的形式将支付凭证发送至甲方邮箱，并在甲方支付全部费用后向甲方开具正式发票。
