商品搜索框制作

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -224,4 +224,5 @@
     <string name="zhy_user_center_version">版本号：</string>
     <string name="zhy_user_center_setting">设置</string>
     <string name="zhy_user_center_edit">编辑</string>
+    <string name="store_search_hint">请输入您要查找的商品</string>
 </resources>
