--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -222,6 +222,7 @@
     <string name="zhy_user_center_idea">意见反馈</string>
     <string name="zhy_user_center_platform">入驻平台</string>
     <string name="zhy_user_center_version">版本号：</string>
+    <string name="zhy_user_center_userinfo">我的资料</string>
     <string name="zhy_user_center_setting">设置</string>
     <string name="zhy_user_center_edit">编辑</string>
     <string name="store_search_hint">请输入您要查找的商品</string>
