增加商品属性查询

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
     <string name="maptest_type">地图类型</string>
     <string name="maptest_traffic">交通图</string>
     <string name="main_1">首页</string>
-    <string name="main_2">商城</string>
+    <string name="main_2">圆满</string>
     <string name="main_3">订单</string>
     <string name="main_4">发现</string>
     <string name="sign">签到</string>
