--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
     <string name="main_1">首页</string>
     <string name="main_2">圆满</string>
     <string name="main_3">订单</string>
-    <string name="main_4">发现</string>
+    <string name="main_4">服务车</string>
     <string name="sign">签到</string>
     <string name="my_1">电话咨询</string>
     <string name="my_2">在线咨询</string>
